--- a/django_level_two/learning_users/templates/menu.html
+++ b/django_level_two/learning_users/templates/menu.html
@@ -15,7 +15,7 @@
                   <span class="nav-profile-name">{{request.user.username}}</span>
                 </a>
                 <div class="dropdown-menu dropdown-menu-right navbar-dropdown" aria-labelledby="profileDropdown">
-                  <a class="dropdown-item" href="/user/{{request.user.id}}">
+                  <a class="dropdown-item" href="/account/{{request.user.id}}/">
                     <i class="mdi mdi-settings text-primary"></i>
                    My Account
                   </a>
@@ -46,7 +46,7 @@
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/account/">
+              <a class="nav-link" href="/account/{{request.user.id}}/">
                 <i class="mdi mdi-account menu-icon"></i>
                 <span class="menu-title">My Account</span>
               </a>
